feature/9/bug_fix | обновил сваггер
