# docs/swagger.json
@@ -21,8 +21,8 @@
                 "summary": "Create items",
                 "parameters": [
                     {
-                        "description": "Create items",
-                        "name": "input",
+                        "description": "Query Params",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -65,7 +65,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
+                        "description": "Enter item_id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -126,7 +126,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "item id",
+                        "description": "Enter item_id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -160,8 +160,15 @@
                 "summary": "Update Items",
                 "parameters": [
                     {
-                        "description": "Items struct",
-                        "name": "input",
+                        "type": "string",
+                        "description": "Enter id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "query params",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -170,8 +177,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "20": {
+                        "description": "",
                         "schema": {
                             "type": "string"
                         }
@@ -203,8 +210,8 @@
                 "summary": "Expense Create",
                 "parameters": [
                     {
-                        "description": "Create expense",
-                        "name": "input",
+                        "description": "query params",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -234,42 +241,14 @@
                 }
             }
         },
-        "/book_daily_expense/get_by_date": {
-            "get": {
-                "description": "Get Expense By date",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "expense"
-                ],
-                "summary": "Get Expense By date",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/book_daily_expense/get_by_date_and_item": {
             "get": {
-                "description": "Get Expense Summ By Item and Date",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "expense"
                 ],
-                "summary": "Get Expense Summ By Item and Date",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -299,7 +278,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "item id",
+                        "description": "enter item_id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -323,14 +302,49 @@
         },
         "/book_daily_expense/get_summ_by_period": {
             "get": {
-                "description": "Get Expense Summ By Period",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "expense"
                 ],
-                "summary": "Get Expense Summ By Period",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/daily_expense/get_by_date": {
+            "get": {
+                "description": "Get Expense By date",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "expense"
+                ],
+                "summary": "Get Expense By date",
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ExpensePeriod"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -349,13 +363,27 @@
         }
     },
     "definitions": {
+        "model.ExpensePeriod": {
+            "type": "object",
+            "properties": {
+                "fromdate": {
+                    "type": "string"
+                },
+                "item": {
+                    "type": "string"
+                },
+                "todate": {
+                    "type": "string"
+                }
+            }
+        },
         "model.UserCostItems": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer"
-                },
                 "description": {
+                    "type": "string"
+                },
+                "guid": {
                     "type": "string"
                 },
                 "id": {
