# internal/app/apiserver/expenseHandler.go
@@ -11,18 +11,18 @@ import (
 
 // handleExpenseCreate Expense Create    godoc
 //
-//	@Summary    Expense Create
-//	@Description  Expense Create
+//	@Summary		Expense Create
+//	@Description	Expense Create
 //
-//	@Param      request  body  model.UserExpense  true  "query params"
+//	@Param			request	body	model.UserExpense	true	"query params"
 //
-//	@Produce    application/json
-//	@Tags      expense
-//	@Success    201  {string}  response.Response{}
-//	@Failure    422  {string}  response.Response{}
-//	@Failure    400  {string}  response.Response{}
+//	@Produce		application/json
+//	@Tags			expense
+//	@Success		201	{string}	response.Response{}
+//	@Failure		422	{string}	response.Response{}
+//	@Failure		400	{string}	response.Response{}
 //
-//	@Router      /book_daily_expense/create [post]
+//	@Router			/book_daily_expense/create [post]
 func (s *server) handleExpenseCreate() http.HandlerFunc {
 	type request struct {
 		Amount float32 `json:"amount"`
@@ -53,17 +53,17 @@ func (s *server) handleExpenseCreate() http.HandlerFunc {
 
 // handleGetExpenseByItem GetExpenseByItem    godoc
 //
-//	@Summary    Get Expense By Item
-//	@Description  Get Expense By Item
+//	@Summary		Get Expense By Item
+//	@Description	Get Expense By Item
 //
-//	@Param      id  path  string  true  "enter item_id"
+//	@Param			id	path	string	true	"enter item_id"
 //
-//	@Produce    application/json
-//	@Tags      expense
-//	@Success    200  {string}  response.Response{}
-//	@Failure    422  {string}  response.Response{}
+//	@Produce		application/json
+//	@Tags			expense
+//	@Success		200	{string}	response.Response{}
+//	@Failure		422	{string}	response.Response{}
 //
-//	@Router      /book_daily_expense/get_by_id/{id} [get]
+//	@Router			/book_daily_expense/get_by_id/{id} [get]
 func (s *server) handleGetExpenseByItem(w http.ResponseWriter, r *http.Request) {
 	itemID, _ := strconv.Atoi(mux.Vars(r)["id"])
 
@@ -76,17 +76,17 @@ func (s *server) handleGetExpenseByItem(w http.ResponseWriter, r *http.Request) 
 
 // handleExpenseByDate handleGetExpenseByDate    godoc
 //
-//	@Summary    Get Expense By date
-//	@Description  Get Expense By date
+//	@Summary		Get Expense By date
+//	@Description	Get Expense By date
 //
-//	@Param      request  body  model.ExpensePeriod  true  "query params"
+//	@Param			request	body	model.ExpensePeriod	true	"query params"
 //
-//	@Produce    application/json
-//	@Tags      expense
-//	@Success    200  {string}  response.Response{}
-//	@Failure    422  {string}  response.Response{}
+//	@Produce		application/json
+//	@Tags			expense
+//	@Success		200	{string}	response.Response{}
+//	@Failure		422	{string}	response.Response{}
 //
-//	@Router      /daily_expense/get_by_date [get]
+//	@Router			/daily_expense/get_by_date [get]
 func (s *server) handleGetExpenseByDate(w http.ResponseWriter, r *http.Request) {
 	type request struct {
 		FromDate time.Time `json:"from_date"`
@@ -111,16 +111,16 @@ func (s *server) handleGetExpenseByDate(w http.ResponseWriter, r *http.Request) 
 
 // handleGetExpenseByItemAndDate GetExpenseByItemAndDate    godoc
 //
-//  @Summary    Get Expense By Item And Date
-//  @Description  Get Expense By Item And Date
-//  @Param      request  body  model.ExpensePeriod  true  "query params"
+//	@Summary		Get Expense By Item And Date
+//	@Description	Get Expense By Item And Date
+//	@Param			request	body	model.ExpensePeriod	true	"query params"
 
-// @Produce  application/json
-// @Tags    expense
-// @Success  200  {string}  response.Response{}
-// @Failure  422  {string}  response.Response{}
+// @Produce	application/json
+// @Tags		expense
+// @Success	200	{string}	response.Response{}
+// @Failure	422	{string}	response.Response{}
 //
-// @Router    /book_daily_expense/get_by_date_and_item [get]
+// @Router		/book_daily_expense/get_by_date_and_item [get]
 func (s *server) handleGetExpenseByItemAndDate(w http.ResponseWriter, r *http.Request) {
 	type request struct {
 		FromDate time.Time `json:"from_date"`
@@ -147,16 +147,16 @@ func (s *server) handleGetExpenseByItemAndDate(w http.ResponseWriter, r *http.Re
 
 // handleGetExpenseSummByPeriod GetExpenseSummByPeriod    godoc
 //
-//  @Summary    Get Expense Summ By Period
-//  @Description  Get Expense Summ By Period
-//  @Param      request  body  model.ExpensePeriod  true  "query params"
+//	@Summary		Get Expense Summ By Period
+//	@Description	Get Expense Summ By Period
+//	@Param			request	body	model.ExpensePeriod	true	"query params"
 
-// @Produce  application/json
-// @Tags    expense
-// @Success  200  {string}  response.Response{}
-// @Failure  422  {string}  response.Response{}
+// @Produce	application/json
+// @Tags		expense
+// @Success	200	{string}	response.Response{}
+// @Failure	422	{string}	response.Response{}
 //
-// @Router    /book_daily_expense/get_summ_by_period [get]
+// @Router		/book_daily_expense/get_summ_by_period [get]
 func (s *server) handleGetExpenseSummByPeriod(w http.ResponseWriter, r *http.Request) {
 	type request struct {
 		FromDate time.Time `json:"from_date"`
